[tool.poetry]
name = "mds-import"
version = "0.1.0"
description = ""
authors = ["Gaurav Vaidya <gaurav@renci.org>"]
readme = "README.md"
packages = [{include = "mds_import"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"

[tool.poetry.scripts]
download-dds = "mds_import.downloader:download_dds"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
